--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "humps": "^2.0.1",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-svg": "^12.1.0"
