--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@react-native-community/slider": "^3.0.3",
+    "d3-shape": "^2.0.0",
     "humps": "^2.0.1",
+    "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-svg": "^12.1.0"
