--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-native": "0.63.2",
-    "react-native-svg": "^12.1.0"
+    "react-native-svg": "^12.1.0",
+    "react-native-view-shot": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
