--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-share": "^3.8.3",
     "react-native-svg": "^12.1.0",
     "react-native-view-shot": "^3.1.2"
   },
