--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,6 +8,12 @@ target 'GolfProDrawingSample' do
 
   use_react_native!(:path => config["reactNativePath"])
 
+  pod 'RNShare', :path => '../node_modules/react-native-share'
+
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
+  pod 'react-native-view-shot', :path => '../node_modules/react-native-view-shot'
+
   target 'GolfProDrawingSampleTests' do
     inherit! :complete
     # Pods for testing
