--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/slider": "^3.0.3",
+    "@types/d3-shape": "^1.3.2",
     "@types/react-native-share": "^3.3.0",
     "d3-shape": "^2.0.0",
     "humps": "^2.0.1",
